# smart-attendance-ai

./: AddFace.py  README.md  Run.py  pyproject.toml  readme.md
Attendance/: 15-12-2024.csv  DD-MM-YYYY.csv
